# outbox

./: .env  .gitignore  .python-version  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2b7e65e7dd7d_first_commit.py  5f098b5aaa30_first_commit.py  820a46e5d7c9_first_commit.py
manifests/: configmap.yaml  postgresql.yaml  volume.yaml
outbox/: populate.py  receiver.py  worker.py
outbox/adapters/: database.py  sqs.py
outbox/models/: package_event.py
outbox/services/: services.py
outbox/util/: encoders.py
volume/cache/: machine.json
volume/logs/: localstack_infra.err
