[tool.poetry]
name = "outbox"
version = "0.0.1"
description = ""
authors = ["Rogerio Biondi <rogerio.biondi@gmail.com>"]
readme = "README.md"
packages = [{include = "outbox"}]

[tool.poetry.dependencies]
python = "^3.10.4"
sqlalchemy = "^1.4.46"
psycopg2 = "^2.9.5"
sqlalchemy-json = "^0.5.0"
boto3 = "^1.26.55"
art = "^5.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"